impl get bench all
